--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.xml
+*.iml
 MANIFEST
 
 # PyInstaller
@@ -121,3 +123,4 @@ dmypy.json
 .idea/misc.xml
 .idea/workspace.xml
 .idea/workspace.xml
+/.idea
